Added a separate item in which the user ID is stored, when generating a token. Made automatic linking of the current user when creating a new checklist

--- a/src/XFood.Web/Pages/Check-List/CheckWork.razor
+++ b/src/XFood.Web/Pages/Check-List/CheckWork.razor
@@ -10,14 +10,19 @@
 @using XFoodBlazor.Web.Client.Services.CriticalFactor.GetList;
 @using XFoodBlazor.Web.Client.Services.CriticalFactor.Update;
 @using XFoodBlazor.Web.Client.Services.CriticalFactor.Delete;
+@using Microsoft.AspNetCore.Components.Authorization;
+@using XFoodBlazor.Web.Client.Services.Authorization;
+@using XFoodBlazor.Web.Client.Services.User;
 @inject ICheckService CheckService
 @inject ICriticalFactorService CriticalFactorService
 @inject ICheckListCriteriaService CheckCriteriaService
-
+@inject IAuthService AuthService;
+@inject AuthenticationStateProvider AuthenticationStateProvider;
 
 @if (response != null)
 {
     <p>Пиццерия: @response.CheckList.Pizzeria?.Name</p>
+    <p>Пиццерия: @response.CheckList.User?.Id</p>
     <p>Менеджер: @response.CheckList.Manager?.FirstName @response.CheckList.Manager?.LastName</p>
 
     <table class="table">
@@ -322,7 +327,7 @@ else
         createCriticalFactorResponse = await CriticalFactorService.Create(createCriticalFactorRequest);
         CriticalFactor = "";
         await RefreshCriticalFactorsList();
-        
+
     }
 
     private async Task SaveScore()
@@ -349,7 +354,11 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        var userId = user.FindFirst("sub").Value;
         request.ManagerId = ManagerId;
+        request.UserId = Convert.ToInt32(userId);
         response = await CheckService.Create(request);
         getListCriticalFactorResponse = await CriticalFactorService.GetCriticalFactors(new GetListCriticalFactorRequest());
         await RefreshCriticalFactorsList();
