Created a separate Verification page for the expert. This page displays all checks for a given user. Implemented filtering by Active and Done status

--- a/src/XFood.Web/Pages/Check-List/CheckWork.razor
+++ b/src/XFood.Web/Pages/Check-List/CheckWork.razor
@@ -375,6 +375,7 @@ else
         PointProz = TotalPoints / MaxPoints * 100;
         setTotalPointsRequest.TotalPoints = TotalPoints;
         setTotalPointsRequest.EndCheck = DateTime.UtcNow;
+        setTotalPointsRequest.Status = "done";
         setTotalPointsRequest.Id = response.CheckList.Id;
         selectedcheckListId1 = response.CheckList.Id;
         setTotalPointsResponse = await CheckService.SetTotalPoints(setTotalPointsRequest);
