--- a/src/XFood.Web/Pages/Check-List/CompletedСhecklist.razor
+++ b/src/XFood.Web/Pages/Check-List/CompletedСhecklist.razor
@@ -249,7 +249,7 @@ else
         @if (isSentSuccessfully)
         {
             <div class="alert alert-success" role="alert">
-                Сообщение успешно отправлено!
+                Апелляция успешно отправлено!
             </div>
         }
         <div class="modal-content">
@@ -260,16 +260,16 @@ else
             <div class="modal-body">
                 <div class="mb-3">
                     <label class="form-label">Критерий:</label>
-                    <textarea class="form-control" id="criterion" readonly>@selectedCriterion</textarea>
+                    <textarea class="form-control" id="criterion" readonly>@selectedCriterion required</textarea>
                 </div>
 
                 <div class="mb-3">
                     <label for="email" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="email" @bind="@emailValue">
+                    <input type="email" class="form-control" id="email" @bind="@emailValue" required>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Комментарий:</label>
-                    <textarea class="form-control" id="description" rows="3" @bind="@commentValue"></textarea>
+                    <textarea class="form-control" id="description" rows="3" @bind="@commentValue" required></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="attachments" class="form-label">Фотографии:</label>
