added font dodo font

--- a/src/XFood.Web/Shared/MainLayout.razor
+++ b/src/XFood.Web/Shared/MainLayout.razor
@@ -2,16 +2,16 @@
 
 <div class="container">
     <Header />
-    <div class="page">
+    <div class="page main mt-3 row gx-2">
         <div class="sidebar">
             <NavMenu />
         </div>
 
         <main>
-            <div class="top-row px-4">
+          @*   <div class="top-row px-4">
                 <LoginDisplay />
                 <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-            </div>
+            </div> *@
 
             <article class="content px-4">
                 @Body
