--- a/src/XFood.Web/Shared/NavMenu.razor.css
+++ b/src/XFood.Web/Shared/NavMenu.razor.css
@@ -58,6 +58,7 @@
     .collapse {
         /* Never collapse the sidebar for wide screens */
         display: block;
+        color: #000;
     }
     
     .nav-scrollable {
