--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -1,10 +1,10 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@* <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
-</div>
+</div> *@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
@@ -18,9 +18,9 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+        <div class="nav-item px-3 side-bar">
             <AuthorizeView>
-                <NavLink class="nav-link" href="fetchdata">
+                <NavLink class="nav-link nav-item" href="fetchdata">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
                 </NavLink>
                 <NavLink class="nav-link" href="pizzerias">
@@ -29,7 +29,7 @@
                 <NavLink class="nav-link" href="stats">
                     <span class="oi oi-bar-chart" aria-hidden="true"></span> Общая статистика
                 </NavLink>
-                <div class="lol text-center text-light">
+                <div class="lol text-center text-light time-zones ">
                     <p>МСК: @currentMoscowTime</p>
                     <p>ЕКТ: @currentYekaterinburgTime</p>
                     <p>БИШ: @currentBishkekTime</p>
@@ -39,10 +39,10 @@
     </nav>
 </div>
 <style>
-    .lol{
-        background-color: #3A0647;
+   .lol{
+        /* background-color: #3A0647; */
         margin-top: 200px;
-    }
+    } 
 </style>
 
 @code {
