--- a/src/XFood.Web/wwwroot/css/app.css
+++ b/src/XFood.Web/wwwroot/css/app.css
@@ -1,7 +1,37 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+@font-face {
+    font-family: "DodoRoundedRegular";
+    src: ('../DodoRounded_v2-Regular/DodoRounded_v2-Regular.ttf')
+}
+
+@font-face {
+    font-family: "DodoRoundedBold";
+    src: ('../DodoRounded_v2-Bold/DodoRounded_v2-Bold.ttf')
+}
+
+@font-face {
+    font-family: "DodoRoundedExtraLight";
+    src: ('../DodoRounded_v2-ExtraLight/DodoRounded_v2-ExtraLight.ttf')
+}
+
+@font-face {
+    font-family: "DodoRoundedLight";
+    src: ('../DodoRounded_v2-Light/DodoRounded_v2-Light.ttf')
+}
+
+@font-face {
+    font-family: "DodoRoundedMedium";
+    src: ('../DodoRounded_v2-Medium/DodoRounded_v2-Medium.ttf')
+}
+
+@font-face {
+    font-family: "DodoRoundedThin";
+    src: ('../DodoRounded_v2-Thint/DodoRounded_v2-Thin.ttf')
+}
+
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'DodoRoundedRegular', Helvetica, Arial, sans-serif;
 }
 
 h1:focus {
