--- a/src/XFood.Web/wwwroot/css/style.css
+++ b/src/XFood.Web/wwwroot/css/style.css
@@ -1,5 +1,5 @@
 ﻿.logoImg {
-    width: 120px;
+    width: 150px;
     height: 30px;
 }
 
@@ -23,3 +23,38 @@
     border: none;
     background-color: #fff;
 }
+
+.main {
+    border-radius: 15px;
+    border: 2px solid black;
+}
+
+
+.menu .nav .nav-item {
+    width: 90%;
+    margin-top: 10px;
+    border: 2px dashed black;
+    border-radius: 10px;
+    margin: 5px auto;
+}
+
+.side-bar {
+  /*  position: relative;
+    height: calc(100vh - 120px);*/
+    padding: 0;
+    border-radius: 15px;
+    border: 2px solid black;
+    /*overflow-y: auto;*/
+}
+
+.time-zones {
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    margin-bottom: 20px;
+    border: 2px solid black;
+    border-radius: 20px;
+/*    width: 90%;
+    left: 50%;
+    transform: translateX(-50%);*/
+}
+
