Added export of statistics data to Excel, added download of Excel file

--- a/src/XFood.Web/Pages/Stats/IndexPage.razor
+++ b/src/XFood.Web/Pages/Stats/IndexPage.razor
@@ -4,7 +4,9 @@
 @using XFoodBlazor.Web.Client.Services.Check_List
 @using XFoodBlazor.Web.Client.Services.Manager
 @using XFoodBlazor.Web.Client.Services.Pizzeria
+@using ClosedXML.Excel;
 @inject IStatsService StatsService
+@inject IJSRuntime JS
 
 <PageTitle>Общая статистика</PageTitle>
 <h3>График контроллинга</h3>
@@ -83,6 +85,8 @@
     </tbody>
 </table>
 
+<button class="btn btn-success" @onclick="DownloadExcel">Export Excel</button>
+
 @code {
     GetListStatsResponse checkLists;
     int selectedManagerId;
@@ -147,4 +151,48 @@
         }
         sortByEndDateAscending = !sortByEndDateAscending;
     }
+
+    private async Task DownloadExcel()
+{
+    using (var libro = new XLWorkbook())
+    {
+        IXLWorksheet table = libro.Worksheets.Add("StatsData");
+        string[] headers = { "КЛН Менеджера", "Пиццерия", "Дата начала проверки", "Дата завершения проверки", "Количество баллов", "Средний балл" };
+        for (int i = 0; i < headers.Length; i++)
+        {
+            table.Cell(1, i + 1).Value = headers[i];
+            table.Cell(1, i + 1).Style.Font.SetBold();
+        }
+        int line = 2; 
+        var groupedCheckLists = filteredCheckLists.GroupBy(c => c.Pizzeria.Name);
+        foreach (var group in groupedCheckLists)
+        {
+            foreach (var checkList in group)
+            {
+                table.Cell(line, 1).Value = $"{checkList.Manager?.FirstName} {checkList.Manager?.LastName}";
+                table.Cell(line, 2).Value = checkList.Pizzeria?.Name;
+                table.Cell(line, 3).Value = checkList?.StartCheck;
+                table.Cell(line, 4).Value = checkList?.EndCheck;
+                table.Cell(line, 5).Value = checkList?.TotalPoints;
+                line++;
+            }
+            var averageTotalPoints = group.Average(c => c.TotalPoints);
+            table.Cell(line, 6).Value = averageTotalPoints;
+            table.Cell(line, 6).Style.Font.SetBold();
+            line++;
+        }
+
+        using (var memoria = new MemoryStream())
+        {
+            libro.SaveAs(memoria);
+            var nombreExcel = $"StatsData_{DateTime.Now.ToString("yyyyMMdd")}.xlsx";
+
+            await JS.InvokeAsync<object>(
+                "saveAsFile",
+                nombreExcel,
+                Convert.ToBase64String(memoria.ToArray())
+            );
+        }
+    }
+}
 }
