changed login and registration form styles

--- a/src/XFood.Web/Shared/Header.razor
+++ b/src/XFood.Web/Shared/Header.razor
@@ -27,8 +27,8 @@
                 <p class="m-0"> @context.User.Identity.Name!</p>
             </Authorized>
             <NotAuthorized>
-                <a class="btn btn-primary register-btn" href="Register">Register</a>
-                <a class="btn btn-warning" href="Login">Log in</a>
+                <a class="btn btn-primary register-btn" href="Register">Регистрация</a>
+                <a class="btn btn-warning" href="Login">Войти</a>
             </NotAuthorized>
         </AuthorizeView>
         
