--- a/src/XFood.Web/Shared/LoginDisplay.razor
+++ b/src/XFood.Web/Shared/LoginDisplay.razor
@@ -24,8 +24,8 @@
         </div>
     </Authorized>
     <NotAuthorized>
-        <a href="Register">Register</a>
-        <a href="Login">Log in</a>
+        <a href="Register">Регистрация</a>
+        <a href="Login">Войти</a>
     </NotAuthorized>
 </AuthorizeView>
 
