--- a/src/XFood.Web/Pages/Autorization/Register.razor
+++ b/src/XFood.Web/Pages/Autorization/Register.razor
@@ -4,41 +4,51 @@
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
 
-<h1>Register</h1>
-
 @if (_showErrors)
 {
     <div class="alert alert-danger" role="alert">
         <p>@_errors</p>
     </div>
 }
+<section class="vh-100 bg-image"
+         style="background-image: url('images/background.jpg'); background-repeat: no-repeat;background-size: cover;">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card" style="border-radius: 15px;">
+                        <div class="card-body p-5">
+                            <h2 class="text-uppercase text-center mb-5">Регистрация</h2>
+                            <EditForm Model="_registerModel" OnValidSubmit="HandleRegistration">
+                                <DataAnnotationsValidator />
+                                <ValidationSummary />
 
-<div class="card">
-    <div class="card-body">
-        <h5 class="card-title">Please enter your details</h5>
-        <EditForm Model="_registerModel" OnValidSubmit="HandleRegistration">
-            <DataAnnotationsValidator/>
-            <ValidationSummary/>
-
-            <div class="form-group">
-                <label for="email">Email address</label>
-                <InputText Id="email" class="form-control" @bind-Value="_registerModel.Email"/>
-                <ValidationMessage For="@(() => _registerModel.Email)"/>
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="email">Email</label>
+                                    <InputText Id="email" class="form-control form-control-lg" @bind-Value="_registerModel.Email" />
+                                    <ValidationMessage For="@(() => _registerModel.Email)" />
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="email">Имя пользователя</label>
+                                    <InputText Id="username" class="form-control form-control-lg" @bind-Value="_registerModel.UserName" />
+                                    <ValidationMessage For="@(() => _registerModel.UserName)" />
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="password">Пароль</label>
+                                    <InputText Id="password" type="password" class="form-control form-control-lg" @bind-Value="_registerModel.Password" />
+                                    <ValidationMessage For="@(() => _registerModel.Password)" />
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <button type="submit" class="btn btn-success mt-3 btn-block btn-lg gradient-custom-4">Зарегистрировать</button>
+                                </div>
+                            </EditForm>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="email">Email address</label>
-                <InputText Id="username" class="form-control" @bind-Value="_registerModel.UserName"/>
-                <ValidationMessage For="@(() => _registerModel.UserName)"/>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <InputText Id="password" type="password" class="form-control" @bind-Value="_registerModel.Password"/>
-                <ValidationMessage For="@(() => _registerModel.Password)"/>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </EditForm>
+        </div>
     </div>
-</div>
+</section>
 
 @code {
 
