--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -1,36 +1,14 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">XFoodBlazor.Web</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
+﻿<div class="@NavMenuCssClass nav-scrollable nav-menu-custom" @onclick="ToggleNavMenu">
+    <nav class="flex-column side-bar">
         <div class="nav-item px-3">
             <AuthorizeView>
-                <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-                </NavLink>
                 <NavLink class="nav-link" href="pizzerias">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Пиццерии
+                    Пиццерии
                 </NavLink>
                 <NavLink class="nav-link" href="stats">
-                    <span class="oi oi-bar-chart" aria-hidden="true"></span> Общая статистика
+                    Общая статистика
                 </NavLink>
-                <div class="lol text-center text-light">
+                <div class="text-center time-zones p-2">
                     <p>МСК: @currentMoscowTime</p>
                     <p>ЕКТ: @currentYekaterinburgTime</p>
                     <p>БИШ: @currentBishkekTime</p>
@@ -39,12 +17,7 @@
         </div>
     </nav>
 </div>
-<style>
-    .lol{
-        background-color: #3A0647;
-        margin-top: 200px;
-    }
-</style>
+
 
 @code {
     private bool collapseNavMenu = true;
